snabbdom学习和实现

--- a/snabbdom学习和实现/public/index.html
+++ b/snabbdom学习和实现/public/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-    <div id="container">
+    <button id="btn"> 点击</button>
 
+    <div id="container">
     </div>
 
     <script src="bundle.js"></script>
